ChangeLog
---------

* created apf-simulated-scheds in misc/

* Proxymanager now able to be run standalone as standard system init daemon. This is so base certs need not be owned or readable by the APF user. 

* Added email notification of factory owner when no valid proxy can be retrieved from the proxymanager. 

* Eliminated all _readconfig() methods in submit plugins. Switched to full initialization during __init__.

* MyProxy support in proxymanager. Allows retrieval of base proxy from MyProxy using passphrase, or using another proxymanager profile proxy for auth.

* fixed bug in Scale sched plugin returning 0 when n*factor < 1. 

* minimum Condor version check. Allows particular plugins to specify minimum. Failure aborts. 

* multiproxy functionality. Allow multiple proxy profiles. proxymanager tries all until one is found. failure generates email.  

* scripts and config files added for logs monitor apf-search-failed

* strip() after split by comma in configloader, to allow things like 'x = foo, bar' with whitespace after comma

* bug in MaxPending sched plugin logic fixed. Now no limit imposed when there are no pending pilots.

* queues configuration files can be read from a directory (i.e. /etc/apf/queues.d/). configloader adapted to accept directories instead of list of URIs

* method name removed from log messages.

* fixed bug in some sched plugins, mixing None and 0 in the logic

* add documentation to install.html (in verbatim, no html format)

* removed all methods for FactoryCLI from bin/factory, and mainLoop() renamed to run()

* added new custom logging level -TRACE- and using it for some long messages, like the output of condor_q in XML format

* configloader converts None in conf to Python None object. Change in default_value logic--if no default_value is provided
  then generic_get returns None. 

* info major refactoring of Info class hierarchy. most objects now have overridden methods to avoid exception generation. 
